[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/UI/RoundCount.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/UI/PlantName.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/UI/PanelOptionBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/Components/ResourcesComponent.gd" type="Script" id=4]
[ext_resource path="res://Resources/Image/souls_bg.png" type="Texture" id=5]

[node name="ResourcesComponent" type="Control"]
margin_right = 128.0
margin_bottom = 136.0
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 99, 100 )
texture = ExtResource( 5 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 10.0
margin_right = 1312.0
margin_bottom = 330.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Souls[/center]"
text = "Souls"
scroll_active = false

[node name="GraySoulName" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 84.0
margin_right = 740.0
margin_bottom = 264.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#eeeeee]Gray[/color]"
text = "Gray"
scroll_active = false

[node name="RedSoulName" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 740.0
margin_bottom = 280.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#cc1111]Red[/color]"
text = "Red"
scroll_active = false

[node name="BlueSoulName" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 116.0
margin_right = 740.0
margin_bottom = 296.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#6666ff]Blue[/color]"
text = "Blue"
scroll_active = false

[node name="YellowSoulName" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 132.0
margin_right = 740.0
margin_bottom = 312.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#dddd22]Yellow[/color]"
text = "Yellow"
scroll_active = false

[node name="PinkSoulName" type="RichTextLabel" parent="."]
margin_left = 100.0
margin_top = 148.0
margin_right = 740.0
margin_bottom = 328.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "[color=#cc22cc]Pink[/color]"
text = "Pink"
scroll_active = false

[node name="GraySoulCount" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 84.0
margin_right = 672.0
margin_bottom = 264.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]0[/right]"
text = "0"
scroll_active = false

[node name="RedSoulCount" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 100.0
margin_right = 672.0
margin_bottom = 280.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]0[/right]"
text = "0"
scroll_active = false

[node name="BlueSoulCount" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 116.0
margin_right = 672.0
margin_bottom = 296.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]0[/right]"
text = "0"
scroll_active = false

[node name="YellowSoulCount" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 132.0
margin_right = 672.0
margin_bottom = 312.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]0[/right]"
text = "0"
scroll_active = false

[node name="PinkSoulCount" type="RichTextLabel" parent="."]
margin_left = 32.0
margin_top = 148.0
margin_right = 672.0
margin_bottom = 328.0
rect_scale = Vector2( 0.1, 0.1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "[right]0[/right]"
text = "0"
scroll_active = false
